kubernetes/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: app
  name: app
spec:
  selector:
    matchLabels:
      component: app
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - image: ghcr.io/lolamtisch/bauclocom_kubernetes/cloudnextcloud:latest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: app-persistent-storage
      restartPolicy: Always
      volumes:
        - name: app-persistent-storage
          persistentVolumeClaim:
            claimName: app-pvc
